Bug 375405 – Corrupted uudecode output with Pan 0.119 (patch included)

Bug 375405 – Corrupted uudecode output with Pan 0.119 (patch included)
http://bugzilla.gnome.org/show_bug.cgi?id=375405